plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.140'
    id "me.modmuss50.mod-publish-plugin" version "1.1.0"
}

version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    gradlePluginPortal()
    mavenCentral()
    maven { url "https://maven.neoforged.net/releases" }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(25)

test {
    useJUnitPlatform()
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}

// Apply modular configuration files
apply from: 'gradle/neoforge.gradle'
apply from: 'gradle/publishing.gradle'
apply from: 'gradle/tasks.gradle'
apply from: 'dependencies.gradle'